# my-transcript

./: .gitignore  README.md  cleanup.md  custom_ner.py  detect_economic_terms_with_embeddings.py  episode_process.py  pyproject.toml  requirements.txt  technical_restructuring_plan.md  test_before_after_comparison.py  transcribe.py
archive/: backup_system.py
cli/: __init__.py  main.py
config/: config_loader.py  settings.json
detectors/: economic_detector.py
docs/: cleanup.md  technical_restructuring_plan.md
extractors/: __init__.py
models/: __init__.py
refactor_backups/phase2_extract_detectedterm_20250917_084826/tests/e2e/: test_performance_baseline.py
refactor_backups/phase3_extract_performancemetrics_20250917_085013/: detect_economic_terms_with_embeddings.py
refactor_backups/phase3_extract_performancemetrics_20250917_085013/tests/e2e/: validation_results.json
refactor_backups/phase4_extract_numericextractor_20250917_085121/: detect_economic_terms_with_embeddings.py  test_sample_segments.jsonl
refactor_backups/phase4_extract_numericextractor_20250917_085121/models/: performance_metrics.py
refactor_backups/phase4_extract_numericextractor_20250917_085121/tests/unit/: test_detected_term.py  test_performance_metrics.py
refactor_backups/phase5_extract_economicdetector_20250917_104453/tests/e2e/: test_refactor_validation.py
refactor_backups/phase5_final/: detect_economic_terms_with_embeddings.py  test_economic_detector.py
refactor_backups/phase5_final/config/: __init__.py
refactor_backups/phase5_final/detectors/: __init__.py
refactor_backups/phase5_final/extractors/: numeric_extractor.py
refactor_backups/phase5_final/models/: detected_term.py
refactor_backups/phase5_final/tests/e2e/: test_baseline_behavior.py
refactor_backups/phase5_final/tests/functional/: test_cli_interface.py
scripts/: README.md  __init__.py  detect_economic_terms_with_embeddings.py  episode_process.py
tests/integration/: test_functional_equivalence.py
tests/unit/: test_economic_detector.py
tools/: README.md
tools/diagnostics/: tune_similarity_threshold.py
tools/validation/: validate_extraction.py
